--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,24 +1,249 @@
 @import "~@/mixin.less";
 
-.normal {
-  font-family: Georgia, sans-serif;
-  margin-top: 4em;
-  text-align: center;
+.page {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+
+  .suffix {
+    font-size: 6px;
+  }
+
+  section {
+    padding: 100px;
+    height: 100vh;
+  }
+
+  header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    padding: 20px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1000;
+
+  }
 }
 
-.welcome {
-  height: 328px;
-  background: url(../assets/yay.jpg) no-repeat center 0;
-  background-size: 388px 328px;
+.logo {
+  position: relative;
+  font-size: 20px;
+  color: #111;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 700;
+  user-select: none;
+  animation: slideLeft .5s ease-in-out forwards;
 }
 
-.list {
-  font-size: 1.2em;
-  margin-top: 1.8em;
-  list-style: none;
-  line-height: 1.5em;
+.toggle {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  //background-image: ;
+  background-size: 30px;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  z-index: 1000;
+  opacity: 0;
+  animation: slideRight .5s ease-in-out forwards;
+  transition-delay: .5s;
+
+  &.active {
+
+  }
 }
 
-.list code {
-  background: #f7f7f7;
+.navigation {
+  position: absolute;
+  display: flex;
+  right: 150px;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+  margin: 0;
+
+  li {
+    list-style: none;
+    user-select: none;
+
+    a {
+      color: #111111;
+      text-decoration: none;
+      font-size: 16px;
+      margin: 0 20px;
+      font-weight: 600;
+      display: inline-block;
+
+      &:hover:before {
+        visibility: visible;
+        width: 100%;
+      }
+
+      &:before {
+        content: "";
+        position: absolute;
+        height: 2px;
+        width: 0;
+        bottom: 0;
+        left: 0;
+        visibility: hidden;
+        background-color: #f82249;
+        transition: all 0.3s ease-in-out 0s;
+      }
+    }
+  }
+
+  &.active {
+    opacity: unset;
+    visibility: unset;
+
+    li a {
+      animation: slideRight .5s ease-in-out forwards;
+      animation-delay: calc(.2s * var(--i));
+    }
+  }
 }
+
+.container {
+  display: flex;
+  height: 100%;
+  z-index: 100;
+
+  .box {
+    position: relative;
+    width: 25%;
+    height: 100%;
+    overflow: hidden;
+    border-right: 10px solid #ffffff;
+
+    &:last-child {
+      border-right: none;
+    }
+
+    .imgBx {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transition: 0.5s;
+      opacity: 0;
+      animation: slideRight .5s ease-in-out forwards;
+      animation-delay: calc(.2s * var(--i));
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: 0.5s;
+      }
+
+      &.active {
+        position: fixed;
+        top: 100px;
+        left: 100px;
+        height: calc(100% - 200px);
+        width: calc(100% - 200px);
+        z-index: 1000;
+        opacity: 1;
+
+        &:hover img {
+          transform: scale(1);
+        }
+      }
+
+      &:hover img {
+        transform: scale(1.2);
+      }
+    }
+  }
+}
+
+@keyframes slideRight {
+  0% {
+    transform: translateX(150px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideLeft {
+  0% {
+    transform: translateX(-150px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.mobile({
+  .page {
+    section {
+      padding: 80px 20px;
+    }
+
+    header {
+      padding: 10px 20px;
+      height: 70px;
+    }
+
+    .navigation {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      &.active li a {
+        margin: 5px 10px;
+        display: inline-block;
+        letter-spacing: 1px;
+        font-size: 20px;
+      }
+    }
+
+    .container {
+      flex-direction: column;
+      flex-wrap: wrap;
+
+      .box {
+        width: 100%;
+        height: 25%;
+        border-bottom: 10px solid #fff;
+
+        &:last-child {
+          border-right: 10px solid #fff;
+        }
+
+        .imgBx.active {
+          top: 70px;
+          left: 20px;
+          height: calc(100% - 160px);
+          width: calc(100% - 40px);
+        }
+      }
+    }
+  }
+});
