--- a/src/components/Product/index.less
+++ b/src/components/Product/index.less
@@ -4,9 +4,10 @@
   padding: 40px 30px;
   background-color: #ffffff;
   border-radius: 10px;
+  box-shadow: 0 20px 50px #f3f7ff;
   margin-bottom: 30px;
   transition: all 0.3s ease-in;
-  box-shadow: 0 0 2px rgb(0 0 0 / 10%);
+  //box-shadow: 0 0 2px rgb(0 0 0 / 10%);
 
   &:hover {
     margin-top: -10px;
