--- a/src/components/Slide/index.less
+++ b/src/components/Slide/index.less
@@ -11,6 +11,9 @@
   //align-items: center;
   padding-top: 150px;
   width: 100%;
+  .mobile({
+    padding-top: 10px;
+  });
 
   .carouselRow {
     .title {
@@ -31,6 +34,7 @@
 
     .actions {
       margin-bottom: 20px;
+
       .btn {
         margin-right: 5px;
       }
