--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -9,6 +9,11 @@
 
   .suffix {
     font-size: 6px;
+    .dot {
+      color: #F1423C;
+      font-weight: 700;
+      font-size: 16px;
+    }
   }
 
   .topSection {
@@ -202,8 +207,8 @@
 
 // 数据指标
 .counterupContainer {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 
   .containerWrapper {
     max-width: 1140px;
