--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name=”keywords” content="刷步数|电影票|星巴克|优惠|公众号|小程序|加盟">
+    <meta name=”description” content="刷步数|电影票|星巴克|优惠|公众号|小程序|加盟">
     <link rel="shortcut icon" href="https://cdn.hocgin.top/uPic/favicon.ico" />
     <title>HOCGIN.</title>
 </head>
