--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -55,6 +55,7 @@
 }
 
 .toggle {
+  text-align: center;
   position: relative;
   width: 30px;
   height: 30px;
@@ -81,6 +82,7 @@
   opacity: 0;
   visibility: hidden;
   transition: 0.5s;
+  padding: 0;
   margin: 0;
 
   li {
