--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -1,4 +1,20 @@
 
 .normal {
+
+  .copytitle {
+    color: rgba(127, 127, 127, 0.6);
+    display: block;
+    text-align: center;
+    margin-top: 8px;
+    font-size: 8px;
+
+    a {
+      color: rgba(127, 127, 127, 0.6);
+
+      &:hover {
+        color: rgba(102, 102, 102, 0.75);
+      }
+    }
+  }
 }
 
