--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -7,17 +7,8 @@
   font-family: 'Poppins', sans-serif;
   overflow-y: hidden;
 
-  .suffix {
-    font-size: 6px;
-    .dot {
-      color: #F1423C;
-      font-weight: 700;
-      font-size: 16px;
-    }
-  }
-
   .topSection {
-    padding: 100px;
+    padding: 0 100px;
     min-height: 100vh;
     background-image: url(http://cdn.hocgin.top/uPic/hero-bg.png);
     background-repeat: no-repeat;
@@ -27,104 +18,6 @@
     z-index: 0;
   }
 
-  .topHeader {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    padding: 20px 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 1000;
-
-  }
-}
-
-.logo {
-  position: relative;
-  font-size: 20px;
-  color: #111;
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-weight: 700;
-  user-select: none;
-  animation: slideLeft .5s ease-in-out forwards;
-}
-
-.toggle {
-  text-align: center;
-  position: relative;
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
-  //background-image: ;
-  background-size: 30px;
-  background-position: center;
-  background-repeat: no-repeat;
-  cursor: pointer;
-  z-index: 1000;
-  opacity: 0;
-  animation: slideRight .5s ease-in-out forwards;
-  transition-delay: .5s;
-
-  &.active {
-
-  }
-}
-
-.navigation {
-  position: absolute;
-  display: flex;
-  right: 150px;
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.5s;
-  padding: 0;
-  margin: 0;
-
-  li {
-    list-style: none;
-    user-select: none;
-
-    a {
-      color: #111111;
-      text-decoration: none;
-      font-size: 16px;
-      margin: 0 20px;
-      font-weight: 600;
-      display: inline-block;
-
-      &:hover:before {
-        visibility: visible;
-        width: 100%;
-      }
-
-      &:before {
-        content: "";
-        position: absolute;
-        height: 3px;
-        width: 0;
-        bottom: 0;
-        left: 0;
-        visibility: hidden;
-        background-color: @themeColor;
-        transition: all 0.3s ease-in-out 0s;
-      }
-    }
-  }
-
-  &.active {
-    opacity: unset;
-    visibility: unset;
-
-    li a {
-      animation: slideRight .5s ease-in-out forwards;
-      animation-delay: calc(.2s * var(--i));
-    }
-  }
 }
 
 .container {
@@ -182,28 +75,6 @@
         transform: scale(1.2);
       }
     }
-  }
-}
-
-@keyframes slideRight {
-  0% {
-    transform: translateX(150px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-@keyframes slideLeft {
-  0% {
-    transform: translateX(-150px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
   }
 }
 
