--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -16,6 +16,7 @@
     background-size: cover;
     position: relative;
     z-index: 0;
+    overflow-x: hidden;
   }
 
 }
@@ -111,7 +112,7 @@
 .mobile({
   .page {
     .topSection {
-      padding: 80px 20px;
+      padding: 0 20px;
     }
 
     .topHeader {
