--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,4 +1,4 @@
-@import "~@/mixin.less";
+@import "../mixin.less";
 
 .page {
   margin: 0;
@@ -17,6 +17,10 @@
     position: relative;
     z-index: 0;
     overflow-x: hidden;
+  }
+
+  :global(.hui-header) {
+    background-color: unset;
   }
 
 }
