--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -8,6 +8,8 @@
     <meta name=”keywords” content="刷步数|电影票|星巴克|优惠|公众号|小程序|加盟">
     <meta name=”description” content="刷步数|电影票|星巴克|优惠|公众号|小程序|加盟">
     <link rel="shortcut icon" href="https://cdn.hocgin.top/uPic/favicon.ico"/>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7086639635704454"
+            crossorigin="anonymous"></script>
     <title>HOCGIN.</title>
 </head>
 <body>
